<resources>
    <string name="app_name">Điểm danh</string>
    <string name="training">Thêm sinh viên</string>
    <string name="recognize">Điểm danh</string>
    <string name="addClass">Thêm lớp học</string>
    <string name="listClass">Danh sách lớp</string>
    <string name="listStudent">Danh sách Sinh viên</string>
    <string name="enter_number">Mã số sinh viên</string>
    <string name="enter_name">Tên</string>
    <string name="history">Lịch sử điểm danh</string>
    <string name="enter_class">Tên lớp</string>
    <string name="add_class_success">Thêm lớp thành công</string>
    <string name="update_class_success">Cập nhật thành công</string>
    <string name="class_roll">Lớp điểm danh: </string>
    <string name="capture">Capture</string>
    <string name="capturing">Capturing</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="image_preview">image preview</string>
    <string name="Traininig">Training...</string>
    <string name="ScanntoPredict">More than one face is needed to predict</string>
    <string name="enterFullInfo">Vui lòng nhập đầy đủ thông tin</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="classes">Lớp</string>
    <string name="has_been">Có mặt</string>
    <string name="turn">Lần</string>
    <string name="day">Ngày</string>
</resources>
