<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:id="@+id/resultClass"
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_margin="8dp"
        android:background="@drawable/bg_round_white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/classes"
                android:textSize="16sp"
                android:gravity="center"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_nameClass"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/has_been"
                android:textSize="16sp"
                android:gravity="center"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_hasBeen"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"
                android:text="0/0"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            android:padding="8dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/day"
                android:textSize="16sp"
                android:gravity="center"
                tools:ignore="NestedWeights" />

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textSize="16sp"
                android:gravity="center"
                android:textColor="@color/colorBlue"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_student"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/resultClass"
        android:layout_above="@id/btnRecognize"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <Button
        android:id="@+id/btnRecognize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="16dp"
        android:background="@drawable/bg_round_blue"
        android:text="@string/recognize"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="24sp" />

</RelativeLayout>